# LAHSO

./: .copier-answers.yml  .gitignore  404.html  Demand Generator.ipynb  K-best.ipynb  Learning Assisted Hybrid Simulation Optimization.ipynb  Output  README.md  TODO.md  bar_chart_plot.py  config.py  extract_output.py  global_variables.py  index.html  main_file.py  objects.inv  pyproject.toml  service_to_path.ipynb  simulation_module.py
.github/workflows/: deploy_docs.yml  test_code.yaml
Datasets/: Fixed Vehicle Schedule.csv  Mode Costs.csv  Network.csv  Network_Barge.csv  Network_Train.csv  Network_Truck.csv  Possible_Paths.csv  Truck Schedule.csv  shipment_requests_200_3w_default.csv  shipment_requests_200_3w_default_2.csv  shipment_requests_200_3w_kbest2.csv  shipment_requests_200_3w_kbest_jp.csv  shipment_requests_200_3w_kbest_test.csv  shipment_requests_200_3w_planned.csv
Datasets/Disruption_Profiles/: No_Request_Disruption_Profile.csv  No_Service_Disruption_Profile.csv  Request_Disruption_Profile.csv  Service_Disruption_Profile_Def.csv  Service_Disruption_Profile_S1.csv  Service_Disruption_Profile_S2.csv  Service_Disruption_Profile_S3.csv  Service_Disruption_Profile_S4.csv  Service_Disruption_Profile_S5.csv
csv_output/: Reference (old model).txt  aw_1.csv  aw_100.csv  aw_20.csv  aw_Def_1.csv  aw_Def_10.csv  aw_Def_100.csv  aw_Def_20.csv  aw_S3_100.csv  eg_100.csv  gp_1.csv  gp_10.csv  gp_100.csv  gp_20.csv  gp_Def_1.csv  gp_Def_10.csv  gp_Def_100.csv  simulation_logs copy.txt  simulation_logs.txt
docs/: index.md
q_table/: default_q_table_output.pkl  q_table_200_0_eps  q_table_200_50000_0_eps.pkl  q_table_200_50000_0_eps_v2.pkl  q_table_200_50000_eps_new.pkl_0_eps  q_table_200_50000_eps_test.pkl_eps.pkl  q_table_20_def.pkl
service_logs/3_1/: service_line_output_gp_0.csv
service_logs/3_2/: service_line_output_gp_1.csv
service_logs/3_20/: service_line_output_aw_0.csv  service_line_output_aw_1.csv  service_line_output_aw_10.csv  service_line_output_aw_11.csv  service_line_output_aw_12.csv  service_line_output_aw_13.csv  service_line_output_aw_14.csv  service_line_output_aw_15.csv  service_line_output_aw_16.csv  service_line_output_aw_17.csv  service_line_output_aw_18.csv  service_line_output_aw_19.csv  service_line_output_aw_2.csv  service_line_output_aw_3.csv  service_line_output_aw_4.csv  service_line_output_aw_5.csv  service_line_output_aw_6.csv  service_line_output_aw_7.csv  service_line_output_aw_8.csv  service_line_output_aw_9.csv  service_line_output_gp_0.csv  service_line_output_gp_10.csv  service_line_output_gp_11.csv  service_line_output_gp_12.csv  service_line_output_gp_13.csv  service_line_output_gp_14.csv  service_line_output_gp_15.csv  service_line_output_gp_16.csv  service_line_output_gp_17.csv  service_line_output_gp_18.csv  service_line_output_gp_19.csv  service_line_output_gp_2.csv  service_line_output_gp_3.csv  service_line_output_gp_4.csv  service_line_output_gp_5.csv  service_line_output_gp_6.csv  service_line_output_gp_7.csv  service_line_output_gp_8.csv  service_line_output_gp_9.csv
service_logs/3_3/: service_line_output_gp_2.csv
service_logs/3_4/: service_line_output_gp_3.csv
service_logs/Def_1/: service_line_output_aw_0.csv  service_line_output_eg_0.csv  service_line_output_gp_0.csv
service_logs/Def_10/: service_line_output_gp_0.csv  service_line_output_gp_1.csv  service_line_output_gp_2.csv  (+7 more)
tests/: test_main.py
training/: Training_Output.csv  Training_Output_v2.csv  default_total_cost_output.pkl  default_total_reward_output.pkl  total_cost_20.pkl  total_cost_200_Dec.pkl  total_cost_200_Jan.pkl  total_cost_200_new.pkl  total_cost_200_test.pkl  total_reward_20.pkl  total_reward_200_Dec.pkl  total_reward_200_Jan.pkl  total_reward_200_new.pkl  total_reward_200_test.pkl
(+2894 files in other folders)
